--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@
                         <a href="#" class="btn btn-primary" data-page="booking">Get Free Consultation</a>
                         <a href="#" class="btn btn-outline" data-page="features">View Products</a>
                     </div>
+                     <h1>Contect No: +91 9773458589</h1>
                 </div>
             </div>
         </section>
@@ -1425,3 +1426,4 @@
 
 
 </html>
+
