--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
         <section class="features">
             <div class="container">
                 <div class="section-title">
-                    <h2>Why Choose AquaPure?</h2>
+                    <h2>Why Choose Jay Ambe RO ?</h2>
                     <p>We provide cutting-edge water purification technology to protect your family's health.</p>
                 </div>
                 <div class="features-grid">
@@ -1422,5 +1422,6 @@
 
 
 </html>
+
 
 
