--- a/index.html
+++ b/index.html
@@ -1309,11 +1309,11 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h3>AquaPure</h3>
-                    <p>India's trusted water purification experts since 2010.</p>
+                    <h3>JayAmbe Ro </h3>
+                    <p>India's trusted water purification experts since 2020.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/share/1BNLAyhtVu/ "><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/jay_ambe_ro?igsh=MWt6cXMzM3ZsN2JlNw=="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="footer-column">
@@ -1421,6 +1421,7 @@
 
 
 </html>
+
 
 
 
